--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
             <div class="listNavItem">
                 <!--image credit to icons8.com-->
-                <img class="navIcon" src="res/homeIcon.png">
+                <img class="navIcon" src="homeIcon.png">
                 <a href="#" onClick="return show('homePageContent');" class="navItem"> Home </a>
            </div>
 
