--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
            <div class="listNavItem">
                <!--image credit to icons8.com-->
-            <img class="navIcon" src="res/browseIcon.png">
+            <img class="navIcon" src="./browseIcon.png">
             <a href="#" onClick="return show('homePageContent');" class="navItem"> Browse </a>
            </div>
 
            <div class="listNavItem">
                <!--image credit to icons8.com-->
-            <img class="navIcon" src="res/radioIcon.png">
+            <img class="navIcon" src="./radioIcon.png">
             <a href="#" onClick="return show('homePageContent');" class="navItem"> Radio </a>
             </div>
         </div>
@@ -101,11 +101,11 @@
             </div>
         </div>
         <div id="spacer">
-            <img id="newPlaylistIcon" src="res/newPlaylistIcon.png">
+            <img id="newPlaylistIcon" src="./newPlaylistIcon.png">
            <p id="newPlaylist"> New Playlist</p>
         </div>
         <div id="currentlyPlaying">
-            <img src="res/howdy.gif" width="100%" height="100%">
+            <img src="./howdy.gif" width="100%" height="100%">
         </div>
     
     
@@ -117,7 +117,7 @@
                 <table id="tableHeader">
                     <tbody>
                     <tr>
-                        <img id="headerPic" src="res/profilePicSquare.jpg">
+                        <img id="headerPic" src="./profilePicSquare.jpg">
                     </tr>
                     <tr>
                       <td><p id="epText">RESUME </p></td>
@@ -139,8 +139,8 @@
                            <p id="playText">PLAY</p>
                         </div>
                     </a>
-                        <img id="heartPlaylist" src="res/heartPlaylistIcon.png">
-                        <img id="detailsButton" src="res/detailsPlaylistIcon.png">
+                        <img id="heartPlaylist" src="./heartPlaylistIcon.png">
+                        <img id="detailsButton" src="./detailsPlaylistIcon.png">
                     </td>
                     </tr>
                     </tbody>
@@ -151,43 +151,43 @@
             <div id="albumListHeader">
                 <p class="listItemNum">#</p>
                 <p id="titleHeader">TITLE</p>
-                <img src="res/timeIcon.png" id="timeHeader"> 
-                <img src="res/starIcon.png" id="starHeader"> 
+                <img src="./timeIcon.png" id="timeHeader"> 
+                <img src="./starIcon.png" id="starHeader"> 
             </div>
             <div class="albumListItem">
                 <p class="listItemNum">1</p>   
-                <img src = "res/heartIcon.png" class="albumListHeart">
+                <img src = "./heartIcon.png" class="albumListHeart">
                 <a class="listTitle" href="#" onClick="return show('workPageContent');">Work History</a>
                 <p class="listItemTime">1:12</p>
-                <img src ="res/thumbsUpIcon.png" class="listItemRating">
+                <img src ="./thumbsUpIcon.png" class="listItemRating">
             </div>
             <div class="albumListItem">
                 <p class="listItemNum">2</p>   
-                <img src = "res/heartIcon.png" class="albumListHeart">
+                <img src = "./heartIcon.png" class="albumListHeart">
                 <a class="listTitle" href="#" onClick="return show('schoolContent');">Education and Clubs</a>
                 <p class="listItemTime">0:52</p>
-                <img src ="res/thumbsUpIcon.png" class="listItemRating">
+                <img src ="./thumbsUpIcon.png" class="listItemRating">
             </div>
             <div class="albumListItem">
                 <p class="listItemNum">3</p>   
-                <img src = "res/heartIcon.png" class="albumListHeart">
+                <img src = "./heartIcon.png" class="albumListHeart">
                 <a class="listTitle" href="#" onClick="return show('aboutContent');">About Me</a>
                 <p class="listItemTime">1:20</p>
-                <img src ="res/thumbsUpIcon.png" class="listItemRating">
+                <img src ="./thumbsUpIcon.png" class="listItemRating">
             </div>
             <div class="albumListItem">
                 <p class="listItemNum">4</p>   
-                <img src = "res/heartIcon.png" class="albumListHeart">
+                <img src = "./heartIcon.png" class="albumListHeart">
                 <a class="listTitle" href="#" onClick="return show('whyApplyContent');">Why I'm Applying</a>
                 <p class="listItemTime">1:30</p>
-                <img src ="res/thumbsUpIcon.png" class="listItemRating">
+                <img src ="./thumbsUpIcon.png" class="listItemRating">
             </div>
             <div class="albumListItem">
                 <p class="listItemNum">5</p>   
-                <img src = "res/heartIcon.png" class="albumListHeart">
+                <img src = "./heartIcon.png" class="albumListHeart">
                 <a class="listTitle" href="https://www.linkedin.com/in/nicholas-ubert-5088a1158/" target=_blank>LinkedIn</a>
                 <p class="listItemTime">0:05</p>
-                <img src ="res/thumbsUpIcon.png" class="listItemRating">
+                <img src ="./thumbsUpIcon.png" class="listItemRating">
             </div>
             <p id="copyright">® 2020 I don't claim to be a web developer but this an original site.</p>
 
@@ -237,10 +237,10 @@
             </ul>
         </div>
         <p id="headerText">Appears On</p>
-        <img src="res/badgerLogo.png" class="workCover">
-        <img src="res/radLogo.png" class="workCover">
-        <img src="res/uwlLogo.png" class="workCover">
-        <img src="res/marcusLogo.png" style="margin-right:20%;" class="workCover">
+        <img src="./badgerLogo.png" class="workCover">
+        <img src="./radLogo.png" class="workCover">
+        <img src="./uwlLogo.png" class="workCover">
+        <img src="./marcusLogo.png" style="margin-right:20%;" class="workCover">
    
         <p class="workTitle">Badger Software</p>
         <p class="workTitle">Radisson Hotel Group</p>
