--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <li class="workList">University of Wisconsin - La Crosse</li>
                 <i class="subTitle">Projected: 2022</i>
                 <ul class="innerList">
-                    <li> In Progress: Bachelor's Degree in Computer Science with a focus on Software Engineering.</li>
+                    <li> In Progress: Bachelor's Degree in Computer Science with a Mathematics Minor.</li>
                 </ul>
             </ul>
           
