--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     <div id="workPageContent">
         <div id="workBody">
         <p id="headerText" style="border-bottom: none;" >Work History</p>
+        <a href="#" onClick="return show('schoolContent');" class="nextLink" > Next Page </a>
         <ul id="infoList">
             <li>Badger Software:</li>
             <i>Senior Developer</i>
@@ -254,6 +255,7 @@
 
      <div id="schoolContent">
         <p id="headerText" style="border-bottom: none;">Education</p>
+         <a href="#" onClick="return show('aboutContent');" class="nextLink" > Next Page </a>
         <ul id="infoList">
             <li class="workList">Germantown High School</li>
             <i class="subTitle"> High School Diploma: 2018</i>
@@ -292,6 +294,7 @@
 
      <div id="aboutContent">
         <p id="headerText" style="border-bottom: none; margin-top: 0;">About Me</p>
+        <a href="#" onClick="return show('whyApplyContent');" class="nextLink" > Next Page </a>
         <ul id="infoList">
             <li>Skills and Familiar Systems</li>
             <ul class="innerList">
