--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <li>Promoted to the role of Team Lead when I was 16 and the theater's youngest employee at the time.</li>
             </ul>
         </div>
-        <p id="headerText">Appears On</p>
+        <p id="headerText" style="display: block;">Appears On</p>
         <img src="./badgerLogo.png" class="workCover">
         <img src="./radLogo.png" class="workCover">
         <img src="./uwlLogo.png" class="workCover">
