--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="playlistNav">
             <!--image credit to icons8.com-->
         <div class="listNavItem">
-            <a href="home.html" class="navItem">&nbsp;... </a>
+            <a href="https://nickubert.com" class="navItem">&nbsp;... </a>
         </div>
             <div class="listNavItem">
                 <!--image credit to icons8.com-->
